Update JEP 493 blog post with cross-link use-case in FAQ (#126)
Updates the blog post of Eclipse Temurin and JEP 493 to explain
how to generate a JDK for a platform different than the currently
running platform (e.g. generate a JDK on Linux for Windows) using
the `jmod` artefacts.

Related: https://github.com/adoptium/adoptium-support/issues/1271
---------

Co-authored-by: George Adams <georgeadams1995@gmail.com>